# adaptive_control

adaptive_controller/: CMakeLists.txt  package.xml
adaptive_controller/launch/: controller.launch  gazebo_controller.launch  gazebo_hector_controller.launch  gazebo_hector_controller_test.launch
adaptive_controller/msg/: ControlMatrix.msg  Data.msg  DataSet.msg
adaptive_controller/py_src/: controller.py  learning_node.py  test.py  velocity_estimator.py  velocity_from_odom_collector.py  velocity_stamped_from_velocity_collector.py
adaptive_controller/src/: data_assembler.cpp
control_msgs/: CMakeLists.txt  package.xml
control_msgs/msg/: ControlVector.msg
